# homebase

./: .gitignore  Cargo.toml  README.md  create_release  create_release.sh  install.sh
examples/: homebase_mikrotik.sh
src/: main.rs
