[package]
name = "homebase"
version = "1.0.0"
edition = "2021"
authors = ["Matt Smith"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icann-rdap-client = "0.0.15"
tokio = { version = "1.35.1", features = ["full"] }
async-recursion = "1.0.5"
serde = "1.0.196"
serde_json = "1.0.111"
rustdns = "0.4.0"
ipnetwork = "0.20.0"
getopts = "0.2.21"
